<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="false"
        android:elevation="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fondo_madera_oscura"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="fondo Card View"
                />

            <ImageView
                android:id="@+id/layout_item_imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="60dp"
                android:scaleType="centerCrop"
                android:contentDescription="foto items"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/layot_item_textView_nombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sombra_textos"
                android:hint="@string/nombreProducto"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toTopOf="@+id/layout_item_imageView"
                app:layout_constraintStart_toStartOf="@+id/layout_item_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/layot_item_textView_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sombra_textos"
                android:text="@string/precio"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#2B2B2B"
                app:layout_constraintBottom_toBottomOf="@+id/layot_item_detalles"
                app:layout_constraintStart_toStartOf="@+id/layout_item_imageView" />

            <TextView
                android:id="@+id/layot_item_detalles"
                android:layout_width="188dp"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/fenix"
                android:inputType="textMultiLine|text"
                android:lines="2"
                android:layout_marginTop="5dp"
                android:text="@string/ver_detalles"
                android:textColor="#ffffff"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/layout_item_imageView"
                app:layout_constraintTop_toBottomOf="@+id/layout_item_imageView" />

            <ImageButton
                android:id="@+id/layout_item_botonComprar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:contentDescription="imagen de boton"
                android:src="@drawable/carrito_compras"
                app:layout_constraintBottom_toBottomOf="@+id/layot_item_textView_nombreProducto"
                app:layout_constraintEnd_toEndOf="@+id/layout_item_imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/layout_item_VerMas"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:padding="2dp"
                android:text="@string/ver_mas"
                android:textAlignment="textEnd"
                android:textColor="#2222ff"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"

                app:layout_constraintEnd_toEndOf="@id/imageView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>